<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AprvSys</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textView_icon">移动审批系统</string>
    <string name="textView_username">用户名</string>
    <string name="textView_pswd"> 密 码</string>
    <string name="button_login">登 陆</string>
    <string name="button_newuser">创建用户</string>
    <string name="button_fgtpswd">忘记密码</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="title_activity_fgt_pswd">FgtPswdActivity</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="title_activity_view_content">ViewContentActivity</string>
    <string name="title_section1">个人信息</string>
    <string name="title_section2">待我审批</string>
    <string name="title_section3">我的上传</string>
    <string name="title_activity_contract_details">ContractDetailsActivity</string>
    <string name="title_activity_approving">ApprovingActivity</string>
    <string name="title_activity_new_contract">NewContractActivity</string>

</resources>
