<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="com.whu.roy.aprvsys.MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp" >

        <TextView
            android:id="@+id/textView_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/textView_icon"
            android:textSize="25sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="@dimen/activity_layout_padding" >

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_username" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" 
            android:maxLength="25" >

        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/LinearLayout_pswd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="@dimen/activity_layout_padding" >

        <TextView
            android:id="@+id/textView_pswd"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_pswd" />

        <EditText
            android:id="@+id/editText_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"             
            android:maxLength="16" >

        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:padding="@dimen/activity_layout_padding" >

        <Button
            android:id="@+id/button_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/button_login" />

        <RelativeLayout
            android:id="@+id/RelativeLayout_newuser_fgtpswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="50dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp" >

            <Button
                android:id="@+id/button_newuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:text="@string/button_newuser" />

            <Button
                android:id="@+id/button_fgtpswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:text="@string/button_fgtpswd" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>